<resources>
    <string name="app_name">walldroid</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="jira_username">###</string>
    <string name="jira_password">###</string>
    <string name="title_activity_main">Walldroid</string>
    <string name="title_activity_jira">Jira wallboard</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Jira wallboard settings</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_random">Random</string>
    <string name="pref_desc_random">Show slides in random order</string>

    <string name="pref_title_cycle_period">Cycle period</string>
    <string name="pref_desc_cycle_period">Time between slide transitionsin seconds</string>
    <string name="pref_title_transition_fx">Transition effect</string>
    <string name="pref_desc_transition_fx">Animation shown to change slides</string>
    <string name="APP_NAME">Walldroid</string>
    <string name="JIRA_USERNAME">JIRA_USERNAME</string>
    <string name="JIRA_PASSWORD">JIRA_PASSWORD</string>
    <string name="JIRA_HOST">JIRA_HOST</string>
    <string name="JIRA_WALLBOARD_ID">JIRA_WALLBOARD_ID</string>
    <string name="FIELD_REQUIRED">This field is required</string>
    <string-array name="pref_list_transition_fx">
        <item>None</item>
        <item>Fade</item>
        <item>Zoom</item>
        <item>Fade zoom</item>
        <item>Scroll left</item>
        <item>Scroll right</item>
        <item>Scroll up</item>
        <item>Scroll down</item>
        <item>Blind X</item>
        <item>Blind Y</item>
        <item>Wipe</item>
    </string-array>
    <string-array name="pref_list_transition_fx_values">
        <item>none</item>
        <item>fade</item>
        <item>zoom</item>
        <item>fadeZoom</item>
        <item>scrollLeft</item>
        <item>scrollRight</item>
        <item>scrollUp</item>
        <item>scrollDown</item>
        <item>blindX</item>
        <item>blindY</item>
        <item>wipe</item>
    </string-array>
    <string name="title_wallboard_list">Wallboards</string>
    <string name="title_wallboard_detail">Wallboard Detail</string>
    <string-array name="plugin_types">
        <item>JIRA</item>
        <item>Other</item>
    </string-array>
</resources>
