<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="random"
        android:summary="@string/pref_desc_random"
        android:title="@string/pref_title_random" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="10"
        android:inputType="number"
        android:key="cycle_period"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/pref_desc_cycle_period"
        android:title="@string/pref_title_cycle_period" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_list_transition_fx"
        android:entryValues="@array/pref_list_transition_fx_values"
        android:key="transition_effect"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_desc_transition_fx"
        android:title="@string/pref_title_transition_fx" />

</PreferenceScreen>
